added friends and location marking

--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -41,10 +41,22 @@
     <TableLayout
         android:id="@+id/tableLayout4"
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
+        android:layout_height="250dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/welcometitle"
         android:layout_margin="10dp">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/friendslistView"
+                android:layout_column="0" />
+
+        </TableRow>
     </TableLayout>
 
     <Button
